syntax = "proto3";
package storage;

service Storage {
    rpc PutBlob (PutBlobRequest) returns (PutBlobResponse);
    rpc GetBlob (GetBlobRequest) returns (GetBlobResponse);
}

message Scope {
    string usecase = 1;
    string scope = 2;
}

message PutBlobRequest {
    Scope scope = 1;
    optional string key = 2;
    bytes contents = 3;
}
message PutBlobResponse {
    string key = 1;
}

message GetBlobRequest {
    Scope scope = 1;
    string key = 2;
}
message GetBlobResponse {
    bytes contents = 1;
}
